--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,4 +1,16 @@
 {
+    "loginSection": {
+        "username": "Username",
+        "password": "Password",
+        "forgotPassword": "Forgot password?",
+        "login": "Login"
+    },
+    "errors": {
+        "emptyUsernameError": "Enter the username",
+        "emptyPasswordError": "Enter the password",
+        "wrongUsernamePassword": "Incorrect username or password"
+    },
+
     "questions": {
         "doYouWantDelete": "Do yow want to delete"
     },
