feat(FuelTypesPage, Table, getFuelTypes, translations): add table in FuelTypesPage, create information in Table, add api for getting fuel types, add translations for table headers

--- a/public/locales/am/translation.json
+++ b/public/locales/am/translation.json
@@ -14,6 +14,14 @@
         "forgotPassword": "Մոռացե՞լ եք գաղտնաբառը",
         "recover": "Վերականգնել"
     },
+    "fuelTypesTable": {
+        "yandexId": "Յանդեքս ID",
+        "fuelName": "Վառելիքի անվանում",
+        "adgCode": "ԱԴԳ կոդ",
+        "departmentId": "Բաժանմունքի ID",
+        "countType": "Չափման միավոր",
+        "action": "Գործողություն"
+    },
     "errors": {
         "emptyUsernameError": "Մուտքագրեք մուտքանունը",
         "emptyPasswordError": "Մուտքագրեք գաղտնաբառը",
