feat(SearchSection, downloadCSV): add logic to export button for fuel types page

--- a/public/locales/am/translation.json
+++ b/public/locales/am/translation.json
@@ -33,6 +33,7 @@
         "export": "Արտահանել"
     },
     "errors": {
+        "connectionError": "Կապի խնդիր, կրկին փորձեք!",
         "emptyUsernameError": "Մուտքագրեք մուտքանունը",
         "emptyPasswordError": "Մուտքագրեք գաղտնաբառը",
         "wrongUsernamePassword": "Սխալ մուտքանուն կամ գաղտնաբառ"
