--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -33,6 +33,7 @@
         "export": "Export"
     },
     "errors": {
+        "connectionError": "Connection error, please try again!",
         "emptyUsernameError": "Enter the username",
         "emptyPasswordError": "Enter the password",
         "wrongUsernamePassword": "Incorrect username or password"
