--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -34,9 +34,13 @@
     },
     "errors": {
         "connectionError": "Connection error, please try again!",
+        "emptyFieldError": "Fill the field",
         "emptyUsernameError": "Enter the username",
         "emptyPasswordError": "Enter the password",
-        "wrongUsernamePassword": "Incorrect username or password"
+        "wrongUsernamePassword": "Incorrect username or password",
+        "onlyNumbersError": "Must contain only numbers",
+        "fuelTypeExistsError": "This fuel type exists!",
+        "yandexFuelTypeIdExistsError": "This Yandex ID exists!"
     },
 
 
