--- a/public/locales/am/translation.json
+++ b/public/locales/am/translation.json
@@ -33,6 +33,15 @@
         "stationsGroupPhoneNumber": "Հեռախոսահամար",
         "action": "Գործողություն"
     },
+    "stations": {
+        "yandexId": "Յանդեքս ID",
+        "stationName": "Լցակայանի անուն",
+        "stationAddress": "Հասցե",
+        "stationPhone": "Հեռախոսահամար",
+        "stationTin": "ՀՎՀՀ",
+        "fuelTypes":"Վառելիքի տեսակներ",
+        "action": "Գործողություն"
+    },
     "operations": {
         "save": "Պահպանել",
         "cancel": "Չեղարկել",
