feat(SearchSection): create search section for stations page, feat(Table): add ellipsis attribute to yandex station id column

--- a/public/locales/am/translation.json
+++ b/public/locales/am/translation.json
@@ -40,12 +40,18 @@
         "stationPhone": "Հեռախոսահամար",
         "stationTin": "ՀՎՀՀ",
         "fuelTypes":"Վառելիքի տեսակներ",
-        "action": "Գործողություն"
+        "action": "Գործողություն",
+        "returnStationsGroupPage": "Վերադառնալ լցակայանների ցանց էջ",
+        "addNewStation": "Ավելացնել նոր լցակայան"
     },
     "operations": {
         "save": "Պահպանել",
         "cancel": "Չեղարկել",
-        "export": "Արտահանել"
+        "export": "Արտահանել",
+        "search": "Որոնում"
+    },
+    "searchSections": {
+        "searchData": "Որոնման տվյալ"
     },
     "errors": {
         "connectionError": "Կապի խնդիր, կրկին փորձեք!",
