--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -66,6 +66,8 @@
         "emptyPasswordError": "Enter the password",
         "wrongUsernamePassword": "Incorrect username or password",
         "onlyNumbersError": "Must contain only numbers",
+        "onlyNumbersLengthEightError": "Must contain only numbers and have a length of exactly 8",
+        "onlyNumbersPointError": "Must contain only numbers and one dot (but not at the beginning or end)",
         "fuelTypeExistsError": "This fuel type exists!",
         "stationExistsError": "This station exists!",
         "yandexIdExistsError": "This Yandex ID exists!"
