feat(ChangeStationFuelPrices): create fuel prices change interface with warning modal before doing change

--- a/public/locales/am/translation.json
+++ b/public/locales/am/translation.json
@@ -1,4 +1,8 @@
 {
+    "generalQuestionsTexts": {
+        "attention": "Ուշադրություն!",
+        "stationFuelTypesPricesWillChange": "Լցակայանի վառելիքի տեսակների գները կփոփոխվեն"
+    },
     "nav": {
         "fuelTypes": "Վառելիքի տեսակներ",
         "stationGroups": "Լցակայանների ցանց",
