--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,4 +1,8 @@
 {
+    "generalQuestionsTexts": {
+        "attention": "Attention!",
+        "stationFuelTypesPricesWillChange": "Stations fuel types prices will change"
+    },
     "nav": {
         "fuelTypes": "Fuel types",
         "stationGroups": "Station groups",
