feat(ChangeStationsGroupFuelPrices): finish functional for changing fuel prices for all fuel types in the group

--- a/public/locales/am/translation.json
+++ b/public/locales/am/translation.json
@@ -1,7 +1,8 @@
 {
     "generalQuestionsTexts": {
         "attention": "Ուշադրություն!",
-        "stationFuelTypesPricesWillChange": "Լցակայանի վառելիքի տեսակների գները կփոփոխվեն"
+        "stationFuelTypesPricesWillBeChanged": "Լցակայանի վառելիքի տեսակների գները կփոփոխվեն",
+        "groupFuelTypesPricesWillBeChanged": "Ցանցի բոլոր վառելիքի տեսակների գները կփոփոխվեն"
     },
     "nav": {
         "fuelTypes": "Վառելիքի տեսակներ",
