feat(DispensersSearchSection): create dispensers search section with search field, export, need to create add new dispenser newly

--- a/public/locales/am/translation.json
+++ b/public/locales/am/translation.json
@@ -74,7 +74,7 @@
         "fuelTypes": "Վառելիքի տեսակներ",
         "action": "Գործողություն",
         "addChangeDispenser": {
-            "addDispenser": "Ավելացնել նոր դիսպենսեր",
+            "addNewDispenser": "Ավելացնել նոր դիսպենսեր",
             "chooseStationGroup": "Ընտրել լցակայանի ցանցը",
             "chooseStation": "Ընտրել լցակայանը",
             "chooseFuelTypes": "Ընտրել վառելիքի տեսակները",
