feat(UsersPage): dill table with users info

--- a/public/locales/am/translation.json
+++ b/public/locales/am/translation.json
@@ -81,6 +81,12 @@
             "changeDispenser": "Փոփոխել դիսպենսերի տվյալները"
         }
     },
+    "users": {
+        "fullName": "Անուն ազգանուն",
+        "role": "Կարգավիճակ",
+        "stations": "Լցակայաններ",
+        "action": "Գործողություն"
+    },
     "operations": {
         "save": "Պահպանել",
         "cancel": "Չեղարկել",
